traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  ecritMessage(0)
  var x=0
  var y=0
  var n=0
  while (getX()!=(getMondeLargeur() && getY()!=getMondeHauteur()){
    if (y==getMondeHauteur()-1){
      x+=1
      y=0
    }
    else {
      y+=1
    }
    setPos(x,y)
    n+=1
    ecritMessage(n)
  }
}